# PyFileShare

./: README.md  pyproject.toml
src/PyFileShare/: __init__.py
src/PyFileShare/CodingTools/: Command.py  Descriptor.py  Function.py  Typing.py  Wrapper.py  __CodingCommands__.py  os.py
src/PyFileShare/CodingTools/Error/: Type.py
src/PyFileShare/WebManager/: Webpage.py  WebpageMeta.py
src/PyFileShare/WebManager/CodingTools/: Command.py  Definition.py  Function.py  Inheritance.py  Typing.py  __CodingCommands__.py  os.py
src/PyFileShare/WebManager/CodingTools/Error/: Attribute.py  Skeleton.py
tests/: __init__.py
