[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name = 'PyFileShare'
version = '1.0.2'
description = 'This library allows you to share Python files using a Webpage.'

readme = 'README.md'
license = {file='LICENSE'}

requires-python = '>=3.7'
dependencies = [
   'flask',
   'qrcode',
   'Pillow',
]

authors = [
   {name='AtoKashinoki', email='atokashinoki@gmial.com'}
]
classifiers = [
   'Development Status :: 3 - Alpha',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: MIT License',
   'Natural Language :: English',
   'Operating System :: OS Independent',
   'Programming Language :: Python :: 3.7',
   'Programming Language :: Python :: 3.8',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3.12',
   'Programming Language :: Python :: 3.13',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development :: Libraries :: Python Modules',
   'Topic :: Utilities',
]


[project.urls]
'Homepage' = 'https://github.com/AtoKashinoki/PyFileShare'
'Bug Traker' = 'https://github.com/AtoKashinoki/PyFileShare/issues'


[project.scripts]
